Platform independent core - part 2 (#465)
* chore: replace org.jetbrains.annotations with org.jspecify.annotations

* feat: wip - migrate obfuscation/cache/proximity to core

* feat: migrate bukkit plugin to entirely to core

* feat: move more classes from plugin to core

* perf: add todos for possible next step to improve pref

* feat: use sync listener to start obfuscation but complete in async listener

* chore: format code

* feat: move world/player accessor listener to non static code

* feat: only force load chunks for obfuscation

* fix: compile errors

* fix: minor bug in bukkit command
chore: use new minecrat 26+ file structure for cache

* fix: Version parse/toString/compareTo/hashCode/equals

* fix: nullability for region file cache

* feat: resolve some PR comments

* fix: config validation error

* fix: async packet reordering on respawn

* fix: multiple issues